--- a/vcx/ci/Dockerfile-libindy
+++ b/vcx/ci/Dockerfile-libindy
@@ -23,7 +23,7 @@ RUN apt-get update -y && apt-get install -y \
 RUN mkdir -p /libindy
 WORKDIR /libindy
 
-ENV LIBINDY_DEB=https:master/libindy_1.4.0~517_amd64.deb
+ENV LIBINDY_DEB=master/libindy_1.4.0~517_amd64.deb
 ENV LIBINDY_DOWNLOAD_URL=https://repo.sovrin.org/sdk/lib/apt/xenial/$LIBINDY_DEB
 
 RUN curl -fsOSL $LIBINDY_DOWNLOAD_URL \
