--- a/vcx/wrappers/java/jnavcx/build.gradle
+++ b/vcx/wrappers/java/jnavcx/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     // https://mvnrepository.com/artifact/net.java.dev.jna/platform
 	// compile group: 'net.java.dev.jna', name: 'jna-platform', version: '4.5.1'
 	compile group: 'net.java.dev.jna', name: 'jna', version: '4.5.1'
-    
+ 
+ 	//compile 'com.github.jnr:jnr-ffi:2.1.8'   
 }
 
