--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -20,10 +20,14 @@ node('ubuntu') {
         }
        
         // update the versions in the toml file and package.json
-        updateVersions(rust)     
+        stage('Updating Versions') {
+            updateVersions(rust)     
+        }
 
         // build and test the so file
-        buildRust(rust)
+        stage ('Building Libvcx.so'){
+            buildRust(rust)
+        }
 
         // test rust
 	    testRust(rust)
@@ -37,13 +41,13 @@ node('ubuntu') {
             libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
         }
         // test python wrapper, the image must be built after the libindy image build, and must be --no-cache
-        stage (' Build Python and Node Images') {
+        stage ('Build Python Image') {
             vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
         }
         testPythonWrapper(vcx_python)
 
         // test nodejs wrapper, the image must be built after  the libindy image build, and must be --no-cache
-        stage (' Build NodeJs Images') {
+        stage ('Build NodeJs Images') {
             nodejs = build('nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs', 'vcx')
             vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
         }
@@ -94,13 +98,11 @@ def testPythonWrapper(envn){
     }
 }
 
-def buildRust(envn){
-    stage ('Building Rust Library'){
-        envn.inside {
-            sh "rustc --version"
-            sh "gcc --version"
-            sh "cd vcx/libvcx; cargo build --features ci --color=never"
-        }
+def buildRust(envn){ 
+    envn.inside {
+        sh "rustc --version"
+        sh "gcc --version"
+        sh "cd vcx/libvcx; cargo build --features ci --color=never"
     }
 }
 
@@ -133,15 +135,13 @@ def createPtyhonArtifact(envn, version) {
 
 // Update the version and revision in the Cargo.toml file, also the so file .
 def updateVersions(app) {
-        stage('Updating Versions') {
-            app.inside {
-                sh 'ls -l'
-                // TODO fix this ... these *SHOULD* be cargo commands.
-                sh 'cd vcx/libvcx; ls -l; ls ../ci/scripts'
-                sh 'cd vcx/libvcx; python ../ci/scripts/cargo-update-version'
+    app.inside {
+        sh 'ls -l'
+        // TODO fix this ... these *SHOULD* be cargo commands.
+        sh 'cd vcx/libvcx; ls -l; ls ../ci/scripts'
+        sh 'cd vcx/libvcx; python ../ci/scripts/cargo-update-version'
 
-            }
-        }
+    }
 }
 
 // Updates the libvcx.so file to libvcx<VER>.so
