--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -102,7 +102,8 @@ node('ubuntu') {
 }
 
 def getRevisionFromGit() {
-    return sh 'git log --pretty=format:\'%h\' -n 1'
+    revision = sh 'git log --pretty=format:\'%h\' -n 1'
+    return revision
 }
 
 def addCert(envn) {
