Enables Rust Testing in Jenkinsfile

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -37,7 +37,7 @@ node('ubuntu') {
 
         // test rust
         stage ('Testing Rust'){
-            // testRust(rust)
+            testRust(rust)
         }
         
         // update the so file to have version
