--- a/vcx/wrappers/java/vcx/build.gradle
+++ b/vcx/wrappers/java/vcx/build.gradle
@@ -18,10 +18,18 @@ def buildTime() {
     df.setTimeZone(TimeZone.getTimeZone("UTC"))
     return df.format(new Date())
 }
+
+def getKrakenPassFromEnv(){
+    return System.getenv( 'KRAKEN_PASS' )
+}
+
+def getKrakenUserFromEnv(){
+    return System.getenv( 'KRAKEN_USER' )
+}
 version = "${versionMajor()}"
 
 def fullVersionName() {
-    return "${versionMajor()}-${buildTime()}"
+    return "com.evernym-vcx_${versionMajor()}-${buildTime()}_x86-armv7"
 }
 
 description = """vcx"""
@@ -59,7 +67,7 @@ android {
 
 }
 
-
+archivesBaseName = fullVersionName()
 buildscript {
 
     repositories {
@@ -86,26 +94,15 @@ allprojects {
         jcenter()
     }
 }
-//task uploadToKraken {
-////    curl -u <username> -X POST -F file=@./<PATH_TO_FILE> https://kraken.corp.evernym.com/repo/android/upload
-//    project(':shared').aar.outputs.files.getFiles()
-//    ['curl', '-u', '"abdus.sami"', "-F" , "\"file=@./<PATH_TO_FILE> \"" ,  "\"https://kraken.corp.evernym.com/repo/android/upload\""].execute()
-//
-//}
 
-//task copyFiles(type: Copy) {
-//    from 'build/outputs/aar/vcx-release.aar'
-//    into "$buildDir/target/aar"
-//    rename 'vcx-release.aar', 'vcx-${fullVersionName()}.aar'
-//
-//}
-//
-//task uploadToKraken(type:Exec) {
-//    executable "/bin/sh"
-//    args "-c", "curl --insecure -u abdus.sami -X POST -F file=@$buildDir/outputs/aar/vcx-release.aar https://kraken.corp.evernym.com/repo/android/upload"
-//}
-//copyFiles.dependsOn(assemble)
-//uploadToKraken.dependsOn(assemble)
+task uploadToKraken(type:Exec) {
+    executable "/bin/sh"
+    String krakenPass= getKrakenPassFromEnv()
+    String krakenUser= getKrakenUserFromEnv()
+    args "-c", "curl --insecure -u $krakenUser:$krakenPass -X POST -F file=@$buildDir/outputs/aar/${archivesBaseName}-release.aar https://kraken.corp.evernym.com/repo/android/upload"
+}
+
+uploadToKraken.dependsOn(assemble)
 
 dependencies {
 
@@ -118,25 +115,4 @@ dependencies {
     testImplementation group: 'org.json', name: 'json', version:'20160810'
 
 }
-//publishing {
-//    publications {
-//        mavenAar(MavenPublication) {
-//            groupId 'com.evernym.sdk'
-//            artifactId 'vcx'
-//            version "${fullVersionName()}"
-//
-//            from components.android
-//        }
-//    }
-//    repositories {
-//        maven {
-//            credentials {
-//                username 'admin'
-//                password 'password'
-//            }
-//            // change to point to your repo, e.g. http://my.org/repo
-//
-//            url "http://localhost:8085/artifactory/gradle-dev-local/"
-//        }
-//    }
-//}
+
