--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -1,5 +1,18 @@
 #!groovy
 
+pipeline()
+
+//'Android' : { android() },
+//'IOS' : { ios() }
+
+def pipeline() {
+    stage('Architectures') {
+        parallel([
+            'Main' : { ubuntuTest() }
+            'Android' : { androidBuild() }
+        ])
+    }
+}
 
 def getUserUid() {
     return sh(returnStdout: true, script: 'id -u').trim()
@@ -9,109 +22,163 @@ def build(name, file, context='.', customParams = '') {
     return docker.build("$name", "${customParams} --build-arg uid=${getUserUid()} -f $file $context")
 }
 
-node('ubuntu') {
-    try {
-        stage ('Checkout'){
-            checkout scm
-        }
-        
-        stage ('Build Rust Image') {
-            rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
-        }
-       
-        // update the versions in the toml file and package.json
-        stage('Updating Versions') {
-            updateVersions(rust)     
-        }
-
-        // build and test the so file
-        stage ('Building Libvcx.so'){
-            buildRust(rust)
-        }
-
-        // test rust
-        stage ('Testing Rust'){
-	        testRust(rust)
-        }
-        
-        // update the so file to have version
-        stage('Updating .so file version') {
-            updateSo(rust)
-        }
-        
-        // image used as an intermediary, where the libvcx.so is placed into /usr/lib.  
-        // This image must be built after the rust build and tests have been run.
-        stage ('Build Libindy Image') {
-            libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
-        }
-        // test python wrapper, the image must be built after the libindy image build, and must be --no-cache
-        stage ('Build Python Image') {
-            vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
-        }
-
-        stage ("Testing Python Wrapper"){
-            testPythonWrapper(vcx_python)
-        }
-
-        // test nodejs wrapper, the image must be built after  the libindy image build, and must be --no-cache
-        stage ('Build NodeJs Images') {
-            nodejs = build('nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs', 'vcx')
-            vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
-        }
-
-        stage ('Test Node Wrapper'){
-            testNodeWrapper(vcx_nodejs)
-        }
-        
-        if (env.BRANCH_NAME == "master") {
-            // create the debian of the library (just the libvcx.so file)
-            stage('Build libvcx Debian and compress .so file') {
+def ubuntuTest() {
+    node('ubuntu') {
+        stage('Main Build - Ubuntu') {
+            try {
+                checkout scm
+                rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
+                updateVersions(rust)
+                buildRust(rust)
+                testRust(rust)
+                updateSo(rust)
+                libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
+                vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
+                testPythonWrapper(vcx_python)
+                nodejs = build('nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs', 'vcx')
+                vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
+                testNodeWrapper(vcx_nodejs)
                 createDeb(rust)
-            }
-            
-            // create the npm deb 
-            createNpmDeb(rust)
-
-            // create pip installable artifact
-            stage ('Building Python Artifact') {
-                createPtyhonArtifact(vcx_python, getVcxVersion(vcx_python))
+                createNpmDeb(rust)
+                createPythonArtifact(vcx_python, getVcxVersion(vcx_python))
+            } catch (Exception ex) {
+                currentBuild.result = "FAILED"
+                if (env.BRANCH_NAME == "master") {
+                    fail()
+                }
+                echo "$ex error"
+            } finally {
+                step([$class: 'WsCleanup'])
             }
         }
-
-    } catch (Exception ex) {
-        currentBuild.result = "FAILED"
-        if (env.BRANCH_NAME == "master") {
-            fail()
-        }
-        echo "$ex error"
-    } finally {
-        step([$class: 'WsCleanup'])
     }
 }
 
-// This runs a python script that extracts version information out of the Cargo.toml file.
-def getVcxVersion(envn){
-    envn.inside {
-        sh 'ls -al'
-        sh 'ls /scripts'
-        withEnv(["PYTHONPATH=/scripts"]) {
-            version = sh(
-                script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"vcx/libvcx/Cargo.toml\"))'",
-                returnStdout: true
-            )
-            return version
+def androidBuild() {
+    node('ubuntu') {
+        stage('Android Build') {
+            try {
+                rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
+                buildAndroidArtifacts(rust)
+            } catch (Exception ex) {
+                currentBuild.result = "FAILED"
+                if (env.BRANCH_NAME == "master") {
+                    fail()
+                }
+                echo "$ex error"
+            } finally {
+                step([$class: 'WsCleanup'])
+            }
+
         }
     }
+}
+
+def vcxSDK() {
+    node('ubuntu') {
+        try {
+            stage ('Checkout'){
+                checkout scm
+            }
+
+            stage ('Build Rust Image') {
+                rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
+            }
+
+            // update the versions in the toml file and package.json
+            stage('Updating Versions') {
+                updateVersions(rust)
+            }
+
+            // build and test the so file
+            stage ('Building Libvcx.so'){
+                buildRust(rust)
+            }
+
+            // test rust
+            stage ('Testing Rust'){
+                testRust(rust)
+            }
+
+            // update the so file to have version
+            stage('Updating .so file version') {
+                updateSo(rust)
+            }
+
+            // image used as an intermediary, where the libvcx.so is placed into /usr/lib.
+            // This image must be built after the rust build and tests have been run.
+            stage ('Build Libindy Image') {
+                libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
+            }
+            // test python wrapper, the image must be built after the libindy image build, and must be --no-cache
+            stage ('Build Python Image') {
+                vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
+            }
+
+            stage ("Testing Python Wrapper"){
+                testPythonWrapper(vcx_python)
+            }
+
+            // test nodejs wrapper, the image must be built after  the libindy image build, and must be --no-cache
+            stage ('Build NodeJs Images') {
+                nodejs = build('nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs', 'vcx')
+                vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
+            }
+
+            stage ('Test Node Wrapper'){
+                testNodeWrapper(vcx_nodejs)
+            }
+
+            if (env.BRANCH_NAME == "master") {
+                // create the debian of the library (just the libvcx.so file)
+                stage('Build libvcx Debian and compress .so file') {
+                    createDeb(rust)
+                }
+
+                // create the npm deb
+                createNpmDeb(rust)
+
+                // create pip installable artifact
+                stage ('Building Python Artifact') {
+                    createPythonArtifact(vcx_python, getVcxVersion(vcx_python))
+                }
+            }
+
+        } catch (Exception ex) {
+            currentBuild.result = "FAILED"
+            if (env.BRANCH_NAME == "master") {
+                fail()
+            }
+            echo "$ex error"
+        } finally {
+            step([$class: 'WsCleanup'])
+        }
+    }
+    }
+
+    // This runs a python script that extracts version information out of the Cargo.toml file.
+    def getVcxVersion(envn){
+        envn.inside {
+            sh 'ls -al'
+            sh 'ls /scripts'
+            withEnv(["PYTHONPATH=/scripts"]) {
+                version = sh(
+                    script: "python3 -c 'import toml_utils; print(toml_utils.get_version_from_file(\"vcx/libvcx/Cargo.toml\"))'",
+                    returnStdout: true
+                )
+                return version
+            }
+        }
 }
 
 def testPythonWrapper(envn){
     envn.inside {
         sh "python3 -m pytest"
     }
-    
+
 }
 
-def buildRust(envn){ 
+def buildRust(envn){
     envn.inside {
         sh "rustc --version"
         sh "gcc --version"
@@ -126,7 +193,7 @@ def testRust(envn) {
 }
 
 // Creates a tar.gz file that is installable from pip.
-def createPtyhonArtifact(envn, version) {
+def createPythonArtifact(envn, version) {
     dir('vcx/wrappers/python3'){
         sh 'echo Building Python Artifact'
         withEnv(["VCX_VERSION=${version}"]) {
@@ -170,7 +237,7 @@ def createDeb(envn) {
 
         // get Evernym Certificate onto machine
         sh "${CERT_SCRIPT}"
-            
+
         // build debian
         sh 'cd vcx/libvcx/; cargo deb --no-build'
 
@@ -189,6 +256,13 @@ def createDeb(envn) {
                 sh "find vcx/libvcx/target/debian/ -type f -name 'libvcx_*_amd64.deb' -exec curl --cacert /tmp/cert/ca.crt -u \"${KRAKEN_CREDENTIALS}\" -X POST https://kraken.corp.evernym.com/repo/portal_dev/upload -F file=@{} \\;"
             }
         }
+    }
+}
+
+def buildAndroidArtifacts(envn) {
+    envn.inside {
+        ANDROID_SCRIPT = 'vcx/ci/scripts/androidBuild.sh'
+        sh "${ANDROID_SCRIPT}"
     }
 }
 
