added android.dockerfile 2

--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -13,7 +13,7 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            'Main' : { ubuntuTest() },
+            //'Main' : { ubuntuTest() },
             'android': { androidBuild() }
         ])
     }
