--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -357,9 +357,17 @@ def fail() {
 }
 
 def buildAndroidArtifacts(envn) {
-    envn.inside {
-        ANDROID_SCRIPT = 'vcx/ci/scripts/androidBuild.sh arm'
-        sh "${ANDROID_SCRIPT}"
-    }
+    // List<String> archs = new ArrayList<String>();
+    // archs.add("arm");
+    // archs.add("arm_64");
+    // archs.add("x86");
+    // envn.inside {
+    //     ANDROID_SCRIPT = 'vcx/ci/scripts/androidBuild.sh'
+    //     for (String arch: archs) {
+    //         sh "${ANDROID_SCRIPT} ${arch}"
+    //     }
+    // }
+    ANDROID_SCRIPT = 'vcx/ci/scripts/androidBuild.sh arm'
+    sh "${ANDROID_SCRIPT}"
 }
 
