--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -22,38 +22,34 @@ node('ubuntu-04') {
 
         
         stage ('Build Rust Image') {
-            // rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
+            rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
         }
        
         // update the versions in the toml file and package.json
         stage('Updating Versions') {
-            // updateVersions(rust)     
+            updateVersions(rust)     
         }
 
         // build and test the so file
         stage ('Building Libvcx.so'){
-            // buildRust(rust)
+            buildLibvcx(rust)
         }
 
         // test rust
         stage ('Testing Rust'){
-            // testRust(rust)
+            testLibvcx(rust)
         }
 
-        stage ('Building libvcx Debian in Docker') {
-            def workspace = pwd()
-            sh "mkdir -p data"
-            sh "docker run -it --rm --user=\"1000\" -v ${workspace}/data:/data -v ${workspace}/vcx:/vcx rust sh -c \"/vcx/ci/scripts/create-so-file.sh\""
-            // sh "docker run --rm -v data:/data -v ${workspace}/vcx:/vcx --user=\"0\" rust sh -c \"/vcx/ci/scripts/create-debian.sh\""
-            sh "test -f data/libvcx.so"
-            // sh "mkdir -p ${workspace}/backup"
-            // sh "docker run --rm -v data:/data -v ${workspace}/backup:/backup --user=\"0\" rust sh -c \"cp -r /data/* /backup\""
-            // sh "ls ${workspace}/backup"
-        }
-        
         // update the so file to have version
         stage('Updating .so file version') {
-            // updateSo(rust)
+            updateSo(rust)
+        }
+
+        stage ('Create Libvcx Debian for Testing Only') {
+            def workspace = pwd()
+            sh "docker run --rm --user=\"1000\" -v ${workspace}:/sdk rust sh -c \"/vcx/ci/scripts/create-debian.sh\""
+            // sh "docker run --rm -v data:/data -v ${workspace}/vcx:/vcx --user=\"0\" rust sh -c \"/vcx/ci/scripts/create-debian.sh\""
+            sh "ls ${workspace}/vcx/libvcx/target/debian"
         }
         
         // image used as an intermediary, where the libvcx.so is placed into /usr/lib.  
@@ -148,7 +144,7 @@ def testPythonWrapper(envn){
     
 }
 
-def buildRust(envn){ 
+def buildLibvcx(envn){ 
     envn.inside {
         sh "rustc --version"
         sh "gcc --version"
@@ -156,7 +152,7 @@ def buildRust(envn){
     }
 }
 
-def testRust(envn) {
+def testLibvcx(envn) {
     envn.inside {
         sh "cd vcx/libvcx; cargo test --color=never -- --test-threads=1"
     }
