--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -27,17 +27,17 @@ node('ubuntu-22') {
        
         // update the versions in the toml file and package.json
         stage('Updating Versions') {
-            // updateVersions(rust)     
+            updateVersions(rust)     
         }
 
         // build and test the so file
         stage ('Building Libvcx.so'){
-            // buildLibvcx(rust)
+            buildLibvcx(rust)
         }
 
         // update the so file to have version
         stage('Updating .so file version') {
-            // updateSo(rust)
+            updateSo(rust)
         }
 
         stage ('Create Libvcx Debian for Testing Only') {
@@ -66,17 +66,16 @@ node('ubuntu-22') {
             def workspace = pwd()
             def userId = sh(returnStdout: true, script: 'id -u').trim()
             sh "docker run --rm -v ${workspace}:/sdk vcx-python sh -c \"/sdk/vcx/wrappers/python3/ci/test-python.sh\""
-            // testPythonWrapper(vcx_python)
         }
 
         // test nodejs wrapper, the image must be built after  the libindy image build, and must be --no-cache
         stage ('Build NodeJs Images') {
-            // nodejs = build('nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs', 'vcx')
-            // vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
+            nodejs = build('nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs', 'vcx')
+            vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
         }
 
         stage ('Test Node Wrapper'){
-            // testNodeWrapper(vcx_nodejs)
+            testNodeWrapper(vcx_nodejs)
         }       
 
         if (env.BRANCH_NAME == "master") {
