--- a/vcx/ci/Jenkinsfile
+++ b/vcx/ci/Jenkinsfile
@@ -13,7 +13,7 @@ testing()
 def testing() {
     stage('Testing') {
         parallel([
-            //'Main' : { ubuntuTest() },
+            //'Main' : { mainUbuntu() },
             'android': { androidBuild() }
         ])
     }
@@ -27,26 +27,49 @@ def build(name, file, context='.', customParams = '') {
     return docker.build("$name", "${customParams} --build-arg uid=${getUserUid()} -f $file $context")
 }
 
-def ubuntuTest() {
+def mainUbuntu() {
     node('ubuntu') {
         stage('Main Build - Ubuntu') {
             try {
                 checkout scm
                 rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
+
+                // update the versions in the toml file and package.json
                 updateVersions(rust)
+
+                // build and test the so file
                 buildRust(rust)
+
+                // test rust
                 testRust(rust)
+
+                // update the so file to have version
                 updateSo(rust)
+
+                // image used as an intermediary, where the libvcx.so is placed into /usr/lib.
+                // This image must be built after the rust build and tests have been run.
                 libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
+
+                // test python wrapper, the image must be built after the libindy image build, and must be --no-cache
                 vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
                 testPythonWrapper(vcx_python)
+
+                // test nodejs wrapper, the image must be built after  the libindy image build, and must be --no-cache
                 nodejs = build('nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs', 'vcx')
                 vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
                 testNodeWrapper(vcx_nodejs)
-                createDeb(rust)
-                createNpmDeb(rust, "*_amd64.tgz")
-                renameAndUploadNpmTgz(rust, "vcx")
-                createPtyhonArtifact(vcx_python, getVcxVersion(vcx_python))
+
+                if (env.BRANCH_NAME == "master") {
+                    // create the debian of the library (just the libvcx.so file)
+                    createDeb(rust)
+
+                    // create the npm deb
+                    createNpmDeb(rust, "*_amd64.tgz")
+                    renameAndUploadNpmTgz(rust, "vcx")
+
+                    // create pip installable artifact
+                    createPtyhonArtifact(vcx_python, getVcxVersion(vcx_python))
+                }
 
             } catch (Exception ex) {
                 currentBuild.result = "FAILED"
@@ -60,6 +83,7 @@ def ubuntuTest() {
         }
     }
 }
+
 
 def androidBuild() {
     node('ubuntu') {
@@ -83,91 +107,6 @@ def androidBuild() {
         }
     }
 }
-
-def vcxSdk() {
-    node('ubuntu') {
-        try {
-            stage ('Checkout'){
-                checkout scm
-            }
-
-
-            stage ('Build Rust Image') {
-                rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
-            }
-
-            // update the versions in the toml file and package.json
-            stage('Updating Versions') {
-                updateVersions(rust)
-            }
-
-            // build and test the so file
-            stage ('Building Libvcx.so'){
-                buildRust(rust)
-            }
-
-            // test rust
-            stage ('Testing Rust'){
-                testRust(rust)
-            }
-
-            // update the so file to have version
-            stage('Updating .so file version') {
-                updateSo(rust)
-            }
-
-            // image used as an intermediary, where the libvcx.so is placed into /usr/lib.
-            // This image must be built after the rust build and tests have been run.
-            stage ('Build Libindy Image') {
-                libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
-            }
-            // test python wrapper, the image must be built after the libindy image build, and must be --no-cache
-            stage ('Build Python Image') {
-                vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
-            }
-
-            stage ("Testing Python Wrapper"){
-                testPythonWrapper(vcx_python)
-            }
-
-            // test nodejs wrapper, the image must be built after  the libindy image build, and must be --no-cache
-            stage ('Build NodeJs Images') {
-                nodejs = build('nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs', 'vcx')
-                vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
-            }
-
-            stage ('Test Node Wrapper'){
-                testNodeWrapper(vcx_nodejs)
-            }
-
-            if (env.BRANCH_NAME == "master") {
-                // create the debian of the library (just the libvcx.so file)
-                stage('Build libvcx Debian and compress .so file') {
-                    createDeb(rust)
-                }
-
-                // create the npm deb
-                createNpmDeb(rust, "*_amd64.tgz")
-                renameAndUploadNpmTgz(rust, "vcx")
-
-                // create pip installable artifact
-                stage ('Building Python Artifact') {
-                    createPtyhonArtifact(vcx_python, getVcxVersion(vcx_python))
-                }
-            }
-
-        } catch (Exception ex) {
-            currentBuild.result = "FAILED"
-            if (env.BRANCH_NAME == "master") {
-                fail()
-            }
-            echo "$ex error"
-        } finally {
-            step([$class: 'WsCleanup'])
-        }
-    }
-}
-
 
 def getRevisionFromGit() {
     revision = sh 'git log --pretty=format:\'%h\' -n 1'
@@ -391,4 +330,89 @@ def publishAndroid(envn) {
     }
 }
 
+
+
+// def vcxSdk() {
+//     node('ubuntu') {
+//         try {
+//             stage ('Checkout'){
+//                 checkout scm
+//             }
+
+
+//             stage ('Build Rust Image') {
+//                 rust = build('rust', 'vcx/ci/ubuntu.dockerfile', 'vcx')
+//             }
+
+//             // update the versions in the toml file and package.json
+//             stage('Updating Versions') {
+//                 updateVersions(rust)
+//             }
+
+//             // build and test the so file
+//             stage ('Building Libvcx.so'){
+//                 buildRust(rust)
+//             }
+
+//             // test rust
+//             stage ('Testing Rust'){
+//                 testRust(rust)
+//             }
+
+//             // update the so file to have version
+//             stage('Updating .so file version') {
+//                 updateSo(rust)
+//             }
+
+//             // image used as an intermediary, where the libvcx.so is placed into /usr/lib.
+//             // This image must be built after the rust build and tests have been run.
+//             stage ('Build Libindy Image') {
+//                 libindy = build('libindy', 'vcx/ci/Dockerfile-libindy', 'vcx')
+//             }
+//             // test python wrapper, the image must be built after the libindy image build, and must be --no-cache
+//             stage ('Build Python Image') {
+//                 vcx_python = build('vcx-python', 'vcx/wrappers/python3/ci/Dockerfile-python-wrapper', 'vcx', '--no-cache')
+//             }
+
+//             stage ("Testing Python Wrapper"){
+//                 testPythonWrapper(vcx_python)
+//             }
+
+//             // test nodejs wrapper, the image must be built after  the libindy image build, and must be --no-cache
+//             stage ('Build NodeJs Images') {
+//                 nodejs = build('nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs', 'vcx')
+//                 vcx_nodejs = build('vcx-nodejs', 'vcx/wrappers/node/ci/Dockerfile-nodejs-wrapper', 'vcx', '--no-cache')
+//             }
+
+//             stage ('Test Node Wrapper'){
+//                 testNodeWrapper(vcx_nodejs)
+//             }
+
+//             if (env.BRANCH_NAME == "master") {
+//                 // create the debian of the library (just the libvcx.so file)
+//                 stage('Build libvcx Debian and compress .so file') {
+//                     createDeb(rust)
+//                 }
+
+//                 // create the npm deb
+//                 createNpmDeb(rust, "*_amd64.tgz")
+//                 renameAndUploadNpmTgz(rust, "vcx")
+
+//                 // create pip installable artifact
+//                 stage ('Building Python Artifact') {
+//                     createPtyhonArtifact(vcx_python, getVcxVersion(vcx_python))
+//                 }
+//             }
+
+//         } catch (Exception ex) {
+//             currentBuild.result = "FAILED"
+//             if (env.BRANCH_NAME == "master") {
+//                 fail()
+//             }
+//             echo "$ex error"
+//         } finally {
+//             step([$class: 'WsCleanup'])
+//         }
+//     }
+// }
 
